# indo-european-migration

./: .gitignore  README.md  pyproject.toml
pie_sim/: __init__.py  analysis.py  cognates.py  geography.py  population.py  scenarios.py
pie_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: demo_branch_analysis.py  demo_branch_sample_locations.py  demo_cognates.py  demo_divergence.py  demo_geography.py  demo_steppe_expansion.py  inspect_pairs.py
tests/: test_analysis.py  test_cognates.py  test_geography.py  test_population.py
