[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pie_sim"
version = "0.1.0"
description = "Computational model of Indo-European divergence under population migration."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["pie_sim*"]
exclude = ["tests*", "scripts*", "figs*"]
